--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ dj-database-url==0.5.0
 Django==3.2.7
 django-filter==2.4.0
 django-heroku==0.3.1
-djangorestframework==3.11.2
+djangorestframework==3.12.4
 dnspython==2.1.0
 email-validator==1.1.3
 Flask==1.0.2
@@ -27,6 +27,7 @@ Flask-SQLAlchemy==2.4.1
 Flask-WTF==0.14.3
 greenlet==1.1.2
 gunicorn==20.1.0
+Markdown==3.3.4
 idna==3.2
 importlib-resources==5.2.2
 itsdangerous==2.0.1
