--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ blinker==1.4
 cffi==1.14.6
 click==8.0.1
 cryptography==3.0
+cloudinary==1.26.0
 dj-database-url==0.5.0
 Django==3.2.7
 django-filter==2.4.0
